# termikita

./: .gitignore  CLAUDE.md  README.md  build-dmg.sh  pyproject.toml  setup.py
assets/: Termikita.icns
plans/260310-1130-macos-terminal-app/: plan.md
plans/260310-1734-terminal-ux-roadmap/: phase-00-performance-and-rendering-fix.md  phase-01-smart-context-menu.md  phase-02-status-bar.md  phase-03-tab-enhancements.md  phase-04-font-ligatures.md  phase-05-smart-links.md  phase-06-syntax-highlighting.md  phase-07-sidebar.md  phase-08-command-blocks.md  phase-09-claude-integration.md  phase-10-polish-animations.md  plan.md
plans/reports/: Explore-260310-1642-termikita-codebase.md  code-review-260310-1747-phase00-performance-fixes.md  code-reviewer-260310-1724-context-menu.md  debugger-260310-1352-fix-runtime-errors.md  fullstack-developer-260310-1247-phase-04-text-renderer.md  fullstack-developer-260310-1307-phase-05-terminal-view.md  fullstack-developer-260310-1339-phase-06-multi-tab-support.md  fullstack-developer-260310-1339-theme-system.md  fullstack-developer-260310-1427-termikita-app-dmg-build.md  project-manager-260310-1819-phase-00-completion.md  researcher-260310-1127-terminal-architecture.md  researcher-260310-1127-terminal-ux-features.md  researcher-260310-1147-vietnamese-ime-compatibility.md  researcher-260310-1154-claude-code-cli-support.md  researcher-260310-1216-ai-terminal-feasibility.md  (+4 more)
tests/: __init__.py  test-buffer-manager.py  test-phase00-performance-fixes.py  test-pty-buffer-pipeline.py
themes/: catppuccin-mocha.json  dracula.json  gruvbox-dark.json  nord.json  solarized-light.json
(+59 files in other folders)
